--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,9 @@
-@import '~antd/dist/antd.css';
+
+* {
+  margin: 0;
+  padding: 0;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -11,4 +16,94 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.flex-container {
+  display: flex;
+  /* justify-content: space-between; */
+}
+
+.container {
+  max-width: 1280px;
+  margin: auto;
+}
+
+
+.mt30 {
+  margin-top: 30px;
+}
+
+.mt15 {
+  margin-top: 15px;
+}
+
+.pt30 {
+  padding-top: 30px;
+}
+
+.pt15 {
+  padding-top: 15px;
+}
+
+.mb30 {
+  margin-bottom: 30px;
+}
+
+.mb15 {
+  margin-bottom: 15px;
+}
+
+.mr15 {
+  margin-right: 15px;
+}
+
+.pb30 {
+  padding-bottom: 30px;
+}
+
+.pb15 {
+  padding-bottom: 15px;
+}
+.pl15{
+  padding-left: 15px;
+}
+.pr15{
+  padding-right: 15px;
+}
+
+.p15 {
+  padding: 15px 0px;
+}
+
+.p25 {
+  padding: 25px 0px;
+}
+
+.btn {
+    font-weight: 400;
+    text-align: center;
+    border: 1px solid rgba(27,31,35,.2);
+    border-radius: 4px;
+    padding: 6px 12px;
+    font-size: 16px;
+    line-height: 1.5;   
+    width: 100%;
+    font-size: 14px;
+    font-weight: 600;
+    line-height: 20px;
+}
+
+.btn-primary {
+    color: #24292e;
+    background-color: #F5F7F9;
+}
+
+@media only screen and (max-width: 767px) {
+  .flex-container {
+     flex-direction: column;
+  }
+  .btn {
+    font-size: 12px;
+    padding: 4px 6px
+  }
 }
